syntax = "proto3";
package iface;

import "common.proto";

service InterfaceService {
  // Interface requests to connect and will get a ConnectionResponse if
  // successful.
  rpc Connection(ConnectionRequest) returns (ConnectionResponse);

  rpc GetList(ClientListRequest) returns (ClientListResponse);

  rpc AddTask(AddTaskRequest) returns (AddTaskResponse);
}

message ConnectionRequest {}

message ConnectionResponse { string uuid = 1; }

message ClientListRequest { string uuid = 1; }

message ClientListResponse { repeated string list = 1; }

message AddTaskRequest {
  string uuid = 1;

  string client_uuid = 2;
  common.ShellCode task = 3;
}

message AddTaskResponse {}

// message ShellCode {
//   string command = 1;
//   optional string arguments = 2;
// }
